# distributed-kv-store

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
include/: consistent_hash_ring.hpp  failure_detector.hpp  kv_store.hpp  router.hpp  simple_hash.hpp
proto/: kvstore.proto
src/: benchmark.cpp  client.cpp  fd_demo.cpp  kv_store.cpp  main.cpp  ring_demo.cpp  router.cpp  server.cpp
tests/: test_consistent_hash_ring.cpp  test_kv_store.cpp
